--- a/style.css
+++ b/style.css
@@ -474,6 +474,33 @@ header {
 
 }
 
+/* Gallery section */
+.gallery-section{
+    padding: 50px 0 100px;
+}
+
+.gallery-section .gallery-list{
+    display: flex;
+    flex-wrap: wrap;
+    gap: 32px;
+}
+
+.gallery-section .gallery-list .gallery-item{
+    overflow: hidden;
+    border-radius: var(--border-radius-s);
+    width: calc(100% / 3 - 32px);
+}
+
+.gallery-section .gallery-item .gallery-image{
+    width: 100%;
+    height: 100%;
+    cursor: zoom-in;
+    transition: 0.3s ease;
+}
+
+.gallery-section .gallery-item:hover .gallery-image{
+    transform: scale(1.3);
+}
 
 /*Responsive media query codo for max width 900px*/
 @media  screen and (max-width:900px) {
@@ -562,6 +589,34 @@ header {
 
     .testimonials-section .slide-wrapper{
         margin: 0 0 30px;    
+    }
+
+    .testimonials-section .swiper-slide-button{
+        display: none;
+    }
+
+    .gallery-section .gallery-list{
+        gap: 30px;
+    }
+
+    .gallery-section .gallery-list .gallery-item{
+        width: calc(100% / 2 - 30px);
+    }
+}
+
+/*Responsive media query for max width 640px */
+@media screen and (max-width: 640px){
+    .menu-section .menu-list{
+        gap: 60px;
+    }
+
+    .menu-section .menu-list .menu-item,
+    .gallery-section .gallery-list .gallery-item{
+        width: 100%;
+    }
+
+    .testimonials-section .slide-wrapper{
+        margin: 0 0 30px;
     }
 
     .testimonials-section .swiper-slide-button{
