--- a/style.css
+++ b/style.css
@@ -26,7 +26,7 @@
     --dark-color: #252525;
     --primary-color: #054fda;
     --secondary-color: #c41c1c;
-    --light-pink-color: #6e9dde;
+    --light-pink-color: #78a5e4;
     --mediun-gray-color: #0a0909;
     
     /* font size */
@@ -52,6 +52,10 @@
     --site-max-width: 1300px;
 }
 
+html{
+    scroll-behavior: smooth;
+}
+
 /* styling for whole site */
 
 ul{
@@ -66,6 +70,12 @@ button{
     border: none;
     background: none;
 }
+
+#menu-open-button, 
+#menu-close-button {
+    color: white; /* Changes the icon color to white */
+}
+
 
 img{
     width: 100%;
@@ -142,7 +152,7 @@ header .navbar{
 
 .navbar .nav-menu .nav-link:hover{
     color: var(--primary-color);
-    background: var(--secondary-color);
+    background:var(--light-pink-color);
 
 }
 .navbar :where(#menu-close-button, #menu-open-button){
@@ -303,6 +313,7 @@ header .navbar{
 }
 
 .testimonials-section .testimonial{
+    user-select: none;
     display: flex;
     padding: 35px;
     text-align: center;
@@ -355,7 +366,7 @@ header .navbar{
 
     .about-section .section-content{
        gap: 70px;
-       flex-direction: column;
+       flex-direction: column-reverse;
 }
     .about-section .about-image-wrapper .theatre1{
         width: 100%;
@@ -502,6 +513,109 @@ header {
     transform: scale(1.3);
 }
 
+/* Contact us section styling */
+.contact-section{
+    padding: 50px 0 100px;
+    background: var(--light-pink-color);
+}
+
+.contact-section .section-content{
+    display:flex;
+    gap: 48px;
+    align-items: flex-start;
+    justify-content: space-between;
+}
+
+.contact-section .contact-info-list .contact-info{
+    display: flex;
+    gap: 20px;
+    margin: 20px 0;
+    align-items: center;
+}
+
+.contact-section .contact-info-list .contact-info i{
+    font-size: var(--font-size-m);
+}
+
+.contact-section .contact-form .form-input{
+    width: 100%;
+    height: 50px;
+    padding: 0 12px;
+    outline: none;
+    margin-bottom: 16px;
+    background: var(--white-color);
+    border-radius: var(--border-radius-s);
+    border: 1px solid var(--mediun-gray-color);
+}
+
+.contact-section .contact-form{
+    max-width: 50%;
+}
+
+.contact-section .contact-form .form-input:focus{
+    border-color: var(--secondary-color);
+}
+
+.contact-section .contact-form textarea.form-input{
+    height: 100px;
+    padding: 12px;
+    resize: vertical;
+}
+
+.contact-section .contact-form .submit-button{
+    padding: 10px 26px;
+    margin-top: 10px;
+    color: var(--white-color);
+    font-size: var(--font-size-m);
+    font-weight: var(--font-weight-medium);
+    background: var(--primary-color);
+    border-radius: var(--border-radius-m);
+    border: 1px solid var(--primary-color);
+    transition: 0.3s ease;
+}
+
+.contact-section .contact-form .submit-button:hover{
+    background: var(--primary-color);
+    background: transparent;
+}
+
+/* Footer section styling */
+.footer-section{
+    padding: 20px 0;
+    background: var(--dark-color);
+}
+
+.footer-section .section-content{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.footer-section :where(.copyright-text, .social-link,
+.policy-link){
+    color: var(--white-color);
+    transition: 0.2s ease;
+}
+
+.footer-section .social-link-list{
+    display: flex;
+    gap: 25px;
+}
+
+.footer-section .social-link-list .social-link{
+    font-size: var(--font-size-l);
+}
+
+.footer-section .social-link-list .social-link:hover,
+.footer-section .policy-text .policy-link:hover{
+    color: var(--secondary-color);
+}
+
+.footer-section .policy-text .separator{
+    margin: 0 5px;
+    color: var(--white-color);
+}
+
 /*Responsive media query codo for max width 900px*/
 @media  screen and (max-width:900px) {
 
@@ -569,7 +683,8 @@ header {
         justify-content: center;
     }
 
-    .hero-section .hero-details :is(.subtitle,.description){
+    .hero-section .hero-details :is(.subtitle,.description),
+    .about-section .about-details, .contact-section .contact-form{
         max-width: 100%;
     }
 
@@ -602,7 +717,17 @@ header {
     .gallery-section .gallery-list .gallery-item{
         width: calc(100% / 2 - 30px);
     }
+
+    .contact-section .section-content{
+        align-items: center;
+        flex-direction: column-reverse;
+    }
+
+
 }
+
+
+
 
 /*Responsive media query for max width 640px */
 @media screen and (max-width: 640px){
@@ -621,5 +746,10 @@ header {
 
     .testimonials-section .swiper-slide-button{
         display: none;
+    }
+
+    .footer-section .section-content{
+        flex-direction: column;
+        gap: 20px;
     }
 }
