--- a/style.css
+++ b/style.css
@@ -428,14 +428,6 @@ header {
     margin: 0 auto;
 }
 
-.hero-section .section-content{
-    display: flex;
-    align-items: center;
-    min-height: 100vh;
-    color: var(--black-color);
-    justify-content:space-between;
-}
-
 .hero-section .hero-details .title{
     font-size:var(--font-size-xxl);
     color: var(--secondary-color);
@@ -463,7 +455,7 @@ header {
 .hero-section .hero-details .button{
     padding: 12px 26px;
     border: 2px solid transparent;
-    color: var(--white-color);
+    color: var(--accent-color);
     border-radius: var(--border-radius-m);
     background: var(--secondary-color);
     font-weight: var(--font-weight-medium);
