--- a/style.css
+++ b/style.css
@@ -447,7 +447,7 @@ header{
 }
 
 .hero-background {
-    background-image: url('3a375f2c-a63a-46c2-aa99-baf878e860e9 (1).jpg');
+    background-image: url('unblurd2.jpg');
     background-size: cover; /* Covers the whole screen without stretching */
     background-position: center center; /* Centers the image horizontally and vertically */
     background-repeat: no-repeat;
