--- a/style.css
+++ b/style.css
@@ -24,8 +24,8 @@
     /* colours */
     --white-color: #fcf8f8;
     --dark-color: #252525;
-    --primary-color: #b3b311;
-    --secondary-color: rgb(242, 195, 8);
+    --primary-color: #c1bb1b;
+    --secondary-color: #c1bb1b;
     --light-pink-color: #feffff;
     --mediun-gray-color: #0a0909;
     
@@ -120,7 +120,7 @@ header img {
     width: 120px; /* Increase the logo size */
     height: auto;
     border-radius: 20%; /* Optional: Makes the logo round if it's square */
-    background-color: #b3b311; /* Adds a yellow background */
+    background-color: #c1bb1b; /* Adds a yellow background */
     padding: 2px; /* Adds some space around the logo */
     box-shadow: 0 0 20px rgba(255, 193, 7, 0.8); /* Adds a yellow glow effect */
   }
@@ -168,7 +168,7 @@ header .navbar{
 }
 
 .social-link-list a{
-    background-color: #b3b311;
+    background-color: #c1bb1b;
     padding: 1em;
     border-radius: 50%;
     height: 64px;
@@ -231,7 +231,7 @@ header .navbar{
 }
 
 .social-link-list a {
-    background-color: #b3b311;
+    background-color: #c1bb1b;
     padding: 0.5em; /* Decrease padding to reduce the size of the boundary */
     border-radius: 50%; /* Keeps it circular */
     height: 48px; /* Decrease height */
@@ -303,6 +303,10 @@ header .navbar{
     align-items: center;
 }
 
+.about-section .section-title::after {
+    display: none; /* This will hide the underline */
+}
+
 /*testimonals section styling*/
 .testimonisals-section{
     padding: 50px 0 100px;
@@ -355,6 +359,10 @@ header .navbar{
 
 .testimonials-section .swiper-slide-button:hover{
     color: var(--primary-color);
+}
+
+.testimonials-section .section-title::after {
+    display: none; /* This will hide the underline */
 }
 
 /* Blog Section Styling 
@@ -565,6 +573,10 @@ header {
     transform: scale(1.3);
 }
 
+.gallery-section .section-title::after {
+    display: none; /* This will hide the underline */
+}
+
 /* gallery-detail-1.html <style> tag OR style.css */
 
 /* Lightbox Styles */
@@ -682,6 +694,10 @@ header {
 .contact-section .contact-form .submit-button:hover{
     background: gray;
     background: transparent;
+}
+
+.contact-section .section-title::after {
+    display: none; /* This will hide the underline */
 }
 
 /* Footer section styling */
